--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Klimat Bez Sadzy</string>
+    <string name="dimension">\u00b5g\//m3</string>
 </resources>
